--- a/client/src/components/ContactForm.css
+++ b/client/src/components/ContactForm.css
@@ -1,36 +1,29 @@
-
-
 .contact-layout {
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
-  gap: 20rem;
-  
-
-  max-width: 1450px;
-  
-  
+  max-width: 1500px;
   margin: 0 auto;
-  
-  
-  padding: 2rem;
-  
-
+  padding: 3rem;
   background: rgba(173, 216, 230, 0.2);
   backdrop-filter: blur(10px);
   border: 1px solid rgba(255, 255, 255, 0.18);
   box-shadow: 0 8px 32px 0 rgba(0, 0, 0, 0.1);
-  
-  
   border-radius: 0.5rem;
 }
 
+.contact-text-left {
+  width: 28%;
+  padding-left: 2rem;
+}
 
-
-.contact-info-left {
+.contact-info-middle {
   display: flex;
   flex-direction: column;
-  gap: 2rem;
+  gap: 3rem;
+  align-items: flex-start;
+  padding: 0 2rem;
+  
 }
 
 .contact-item {
@@ -39,15 +32,20 @@
   gap: 1rem;
 }
 
+.contact-image-right {
+  flex-shrink: 0;
+  padding-left: 3.4rem;
+}
+
 .contact-image-right .image-placeholder {
   width: 300px;
   height: 200px;
-  border: 2px dashed white;
   display: flex;
   align-items: center;
   justify-content: center;
   border-radius: 15px;
   color: #ccc;
+  box-shadow: 6px 6px 16px rgba(0, 0, 0, 0.3);
 }
 
 .reveal-button {
@@ -64,14 +62,28 @@
   background: rgba(255, 255, 255, 0.3);
 }
 
-@media (max-width: 768px) {
+@media (max-width: 1024px) {
   .contact-layout {
     flex-direction: column;
     padding: 2rem 1.5rem;
-    gap: 2rem;
+    gap: 3rem;
   }
 
-  .contact-info-left {
+  .contact-text-left {
+    width: 100%;
+    padding-right: 0rem;
+    text-align: center;
+  }
+
+  .contact-info-middle {
+    padding: 2rem 0;
+    border: none;
+    border-top: 1px solid rgba(255, 255, 255, 0.2);
+    border-bottom: 1px solid rgba(255, 255, 255, 0.2);
     align-items: center;
+  }
+
+  .contact-image-right {
+    padding-left: 0;
   }
 }
