--- a/client/src/App.css
+++ b/client/src/App.css
@@ -6,7 +6,7 @@
     linear-gradient(rgba(40, 44, 52, 0.7), rgba(40, 44, 52, 0.7)),  
     url('./assets/images/backgroundimage1.jpg');                      
   background-size: cover;
-  background-position: center;
+  background-position: center bottom;
   background-attachment: local, fixed, fixed; 
   
   min-height: 100vh;
@@ -31,7 +31,7 @@ main {
   left: 0;
   width: 100%;
   height: 100%;
-  background: rgba(255, 255, 255, 0.010);
+  background: rgba(255, 255, 255, 0);
   backdrop-filter: blur(4px) saturate(150%);
   -webkit-backdrop-filter: blur(4px) saturate(150%);
   border: 1px solid rgba(255, 255, 255, 0.2);
