--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,5 +1,4 @@
 .App {
-  
   background-color: #0d1117;
   background-image: 
     linear-gradient(to bottom, transparent 80%, rgb(10, 10, 15) 100%), 
@@ -12,18 +11,20 @@
   min-height: 100vh;
   color: white;
   text-align: center;
-
   
   position: relative;
-  overflow: hidden; 
+  overflow: hidden;
+  
+  display: flex;
+  flex-direction: column;
+}
 
 main {
   padding-block: 1rem; 
   position: relative;
   z-index: 2;
+  flex-grow: 1;
 }
-
-
 
 .glass-layer {
   position: absolute;
@@ -50,4 +51,3 @@ main {
   background: linear-gradient(to bottom, rgba(255, 255, 255, 0.3), rgba(255, 255, 255, 0));
   pointer-events: none;
 }
-};
